<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.CreateBillFragment">

    <TextView
        android:id="@+id/customer_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/customer_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/customer_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/customer_name_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customer_phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/customer_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_name_et" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/customer_phone_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/customer_phone_tv"
        app:layout_constraintTop_toBottomOf="@id/customer_name_et" />

    <TextView
        android:id="@+id/date_of_bill_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_phone_et" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/date_of_bill_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date_of_bill_tv"
        app:layout_constraintTop_toBottomOf="@id/customer_phone_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_bill_detail_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/add_bill_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_of_bill_et" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bill_detail_recycle_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/export_bill_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_bill_detail_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/export_bill_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_bill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>